first files for autoupdate

--- a/src/qt/electra.qrc
+++ b/src/qt/electra.qrc
@@ -67,7 +67,7 @@
 	<file alias="twitter">res/icons/twitter.png</file>
 	<file alias="cmc">res/icons/cmc.png</file>
         <file alias="github">res/icons/github.png</file>
-	
+	<file alias="update.png">update.png</file>	
     </qresource>
     <qresource prefix="/css">
         <file alias="default">res/css/default.css</file>
